@@ -242,14 +242,14 @@ eta = False
 
 # Verbosity level.
 # Valid: integer between 0 and 5
-# 0: Silent
-# 1: Show info messages
+# 0: Show only warning and error messages
+# 1: Show also info messages
 # 2: Show also debug messages
 # 3: Show also HTTP requests
 # 4: Show also HTTP responses headers
 # 5: Show also HTTP responses page content
-# Default: 0
-verbose = 0
+# Default: 1
+verbose = 1
 
 # Update sqlmap to the latest stable version.
 # Valid: True or False
